# metrics-microservice

./: .coverage  .env  README.md  codecov.yml  coverage.xml  docker-compose.yaml  package-lock.json  pyproject.toml
app/: db.py  definitions.py  entries_utils.py  main.py  models.py
app/api/: db_utils.py  entries.py  history.py
app/consumer/: consumer_queue.py  message_queue_wrapper.py  queue_settings.py
app/feature/: notes.py
datadog-config/: datadog.yaml
tests/app/: test_db.py  test_entries_utils.py
