[tool.poetry]
name = "metrics-service"
version = "0.1.0"
description = "Metrics Service"
authors = ["Federico Pacheco <fpacheco@fi.uba.ar>", "Martina Panetta <mpanetta@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
flake8 = "^3.9.0"
black = "^22.3.0"
pytest = { version = "^7.0.0", optional = true }
pytest-cov = { version = "^2.11.1", optional = true }
httpx = { version = "^0.23.0", optional = true }
requests = { version = "^2.28.2", optional = true }
python-dotenv = "^0.17.1"
sqlalchemy = "^1.4"
asyncpg = "^0.24.0"                                   # PostgreSQL
psycopg2-binary = "^2.9.6"
databases = "^0.5.2"
pydantic = "^1.10.7"
pika = "^1.3.2"
sqlmodel = "^0.0.4"
pytest-asyncio = "^0.21.0"
sqlalchemy-utils = "^0.37.9"

[tool.poetry.extras]
dev = ["pytest", "pytest-cov", "httpx", "requests", "pytest-asyncio", "sqlalchemy-utils"]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.pytest.ini_options]
filterwarnings = ["ignore:::.*"]


